premium: handle monthly premium (#3494)
Fix #12197

--- a/modules/premium/doc/en/CHANGELOG
+++ b/modules/premium/doc/en/CHANGELOG
@@ -1,5 +1,7 @@
+* FEA#12197 Add posibility to monthly synchronize with a custom date day in premium dates calculation rules.
 * BUG#12444 The Rule "Premium Date" is now a boolean type
 * FEA#12906 Display covered information in premium list view
+
 Version 2.6 - 2019-10-11
 * BUG#12448 Generate error when two premiums with amount defined are saved on the same rated entity
 * BUG#12463 Fix premium period computation when coverage is defined with an end rule and product has term and renewal rule defined
