contract_premium_modification: fix schedule summary when no discount is applied (#3495)
* contract_premium_modification: fix schedule summary when no discount is applied

* add changelog

--- a/modules/contract_premium_modification/doc/en/CHANGELOG
+++ b/modules/contract_premium_modification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14014 Crash in simulate API in case no discounts is applied
 * FEA#13843 Add commercial discounts informations in simulate API
 * FEA#13410 Add automatic and time-bound commercial discounts
 * FEA#12989 Manage discounts in subscription API
