account_invoice_cog: Fix fiscal year creation wizard (#3496)
Fix #14015

--- a/modules/account_invoice_cog/doc/fr/CHANGELOG
+++ b/modules/account_invoice_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14015 Coorection de l'assistant de création des années fiscales
+
 Version 2.6 - 2019-10-11
 * BUG#12907 Correction d'une erreur lors d'un changement de conditions de paiments
 
