--- a/modules/loan/locale/fr.po
+++ b/modules/loan/locale/fr.po
@@ -640,6 +640,11 @@ msgid "Name"
 msgstr "Nom"
 
 msgctxt ""
+"field:party.display_insured_outstanding_loan_balance.select_date,and_future_loans:"
+msgid "Include future loans"
+msgstr "Inclure les prêts futurs"
+
+msgctxt ""
 "field:party.display_insured_outstanding_loan_balance.select_date,currency:"
 msgid "Currency"
 msgstr "Devises"
@@ -744,6 +749,12 @@ msgid ""
 "If True, the rule will be applied once per loan share on the associated "
 "option"
 msgstr ""
+
+msgctxt ""
+"help:party.display_insured_outstanding_loan_balance.select_date,and_future_loans:"
+msgid "Include total loan amount when funds release date is in the future"
+msgstr ""
+"Inclure le montant total du prêt quand le prêt n'est pas encore débloqué"
 
 msgctxt "model:contract-loan,name:"
 msgid "Contract Loan"
