report_engine: add generate_documents api (#3431)
Fix #13775
Fix #13776

--- a/modules/questionnaire/doc/en/CHANGELOG
+++ b/modules/questionnaire/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13776 Add a report template list to the questionnaires
 * BUG#13518 Check extra data business kind
 * FEA#13077 Add extra data group in questionnaire parts
 
