--- a/modules/offered_eligibility/doc/fr/CHANGELOG
+++ b/modules/offered_eligibility/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14012 Correction des tests KO
 * FEA#13716 Extraction des informations d'éligibilité dans l'API de simulation
 
 Version 2.6 - 2019-10-11
