--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Set auto_remove_not_subscriptable default to True in subscribe API
 * FEA#13780 Handle subscriptability in APIs
 * FEA#13843 Replace simulate API in contract module
 * BUG#13518 Check extra data business kind
