claim_process: Allow to select only loss desc defined on the process(#3430)
Fix #13824

--- a/modules/claim_process/doc/en/CHANGELOG
+++ b/modules/claim_process/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13824 Allow to select only available loss desc in the process
 BUG#13804 Fix crash in claim creation wizard
 
 Version 2.6 - 2019-10-11
