--- a/modules/claim_process/doc/fr/CHANGELOG
+++ b/modules/claim_process/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13824 Permets de sélectionner uniquement les préjudices disponibles sur le processus
 BUG#13804 Correctif d'un bug dans le wizard de 'Déclaration/instruction de sinistre'
 
 Version 2.6 - 2019-10-11
