--- a/modules/endorsement_insurance_invoice_sepa/doc/fr/CHANGELOG
+++ b/modules/endorsement_insurance_invoice_sepa/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14040 Retrouve le mandat sepa existant lors d'un avenant de passage de paiement chèque à prélèvement si le tiers en a déjà un
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#11182 La sélection des mandats possibles doit inclure les mandats qui commencent à la date d'effet de l'avenant
