--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction des jours de débit autorisés pour les tests
 * FEA#14026 Ajout d'une option pour ne retourner un résumé que de la première quittance non nulle dans l'API simulate
 * BUG#13798 Vérifie si le jour de prélèvement est autorisé
 * BUG#13945 Ne pas annuler les quittances dans la méthode reinvoice car cela est fait dans la méthode rebill
