claim_process: Initialize date in rule engine context when calculating required document (#3441)
Fix #13870

--- a/modules/claim_process/doc/fr/CHANGELOG
+++ b/modules/claim_process/doc/fr/CHANGELOG
@@ -1,4 +1,5 @@
-* BUG#13824 Permets de sélectionner uniquement les préjudices disponibles sur le processus
+BUG#13870 Initialisation de la date dans le contexte d'appel du moteur de règle lors du calcul des documents requis pour un sinistre
+BUG#13824 Permets de sélectionner uniquement les préjudices disponibles sur le processus
 BUG#13804 Correctif d'un bug dans le wizard de 'Déclaration/instruction de sinistre'
 
 Version 2.6 - 2019-10-11
