--- a/modules/claim_process/doc/en/CHANGELOG
+++ b/modules/claim_process/doc/en/CHANGELOG
@@ -1,4 +1,5 @@
-* BUG#13824 Allow to select only available loss desc in the process
+BUG#13870 Initialize date in rule engine context when calculating required document on loss
+BUG#13824 Allow to select only available loss desc in the process
 BUG#13804 Fix crash in claim creation wizard
 
 Version 2.6 - 2019-10-11
