--- a/modules/party_employment/locale/fr.po
+++ b/modules/party_employment/locale/fr.po
@@ -40,7 +40,7 @@ msgstr "Date de fin"
 
 msgctxt "field:party.employment,entry_date:"
 msgid "Entry Date"
-msgstr "Date d'entrée"
+msgstr "Date d'entrée dans l'entreprise ou la fonction publique"
 
 msgctxt "field:party.employment,id:"
 msgid "ID"
@@ -52,7 +52,7 @@ msgstr "Nom de l'enregistrement"
 
 msgctxt "field:party.employment,start_date:"
 msgid "Start Date"
-msgstr "Date de début"
+msgstr "Date de début du contrat de travail (date de recrutement)"
 
 msgctxt "field:party.employment,versions:"
 msgid "Versions"
@@ -74,6 +74,10 @@ msgctxt "field:party.employment,xml_id:"
 msgid "XML Id"
 msgstr "XML Id"
 
+msgctxt "field:party.employment.version,annual_salary_premium:"
+msgid "Annual Salary Premium"
+msgstr "Primes annuelles"
+
 msgctxt "field:party.employment.version,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -88,7 +92,7 @@ msgstr "Créé par"
 
 msgctxt "field:party.employment.version,date:"
 msgid "Date"
-msgstr "Date"
+msgstr "Date d'effet"
 
 msgctxt "field:party.employment.version,employment:"
 msgid "Employment"
@@ -108,7 +112,7 @@ msgstr "Nom de l'enregistrement"
 
 msgctxt "field:party.employment.version,work_time_type:"
 msgid "Work Time Type"
-msgstr "Durée de travail"
+msgstr "Quotité de travail"
 
 msgctxt "field:party.employment.version,write_date:"
 msgid "Write Date"
@@ -206,6 +210,14 @@ msgctxt "field:party.party,employments:"
 msgid "Employments"
 msgstr "Situation professionnelle"
 
+msgctxt "field:party.party,is_work_section:"
+msgid "Is Work Section"
+msgstr "Service gestionnaire"
+
+msgctxt "field:party.party,work_section_role:"
+msgid "Work Section"
+msgstr "Service gestionnaire"
+
 msgctxt "field:party.work_section,code:"
 msgid "Code"
 msgstr "Code"
@@ -230,9 +242,9 @@ msgctxt "field:party.work_section,id:"
 msgid "ID"
 msgstr "Identifiant"
 
-msgctxt "field:party.work_section,name:"
-msgid "Name"
-msgstr "Nom de l'enregistremnt"
+msgctxt "field:party.work_section,legal_entity:"
+msgid "Party"
+msgstr "Tiers"
 
 msgctxt "field:party.work_section,party:"
 msgid "Party"
@@ -278,6 +290,10 @@ msgctxt "help:party.employment,start_date:"
 msgid "Begin date of the employment contract"
 msgstr "Date de début du contrat de travail"
 
+msgctxt "help:party.employment,work_section:"
+msgid "Work section where the employee is attached"
+msgstr "Service gestionnaire auquel est rattaché l'employé"
+
 msgctxt "help:party.employment_kind,name:"
 msgid "Employment kind name"
 msgstr "Nom du type de contrat de travail"
@@ -286,9 +302,25 @@ msgctxt "help:party.employment_work_time_type,name:"
 msgid "Employment work time type name"
 msgstr "Nom du type de durée de travail"
 
-msgctxt "help:party.work_section,name:"
-msgid "Work Section Name"
-msgstr "Nom du service gestionnaire"
+msgctxt "help:party.party,is_work_section:"
+msgid ""
+"If check, the party will be defined as a work section and can be link to a "
+"legal entity"
+msgstr ""
+"Si défini, le tiers sera défini comme un service gestionnaire et pourra être"
+" lié à une société"
+
+msgctxt "help:party.party,work_section_role:"
+msgid "Work section role definition"
+msgstr "Role Service gestionnaire"
+
+msgctxt "help:party.work_section,legal_entity:"
+msgid "Legal entity where the work section belongs"
+msgstr "Société auquelle appartient le service gestionnaire"
+
+msgctxt "help:party.work_section,party:"
+msgid "Work section party record"
+msgstr "Tiers décrivant le service gestionnaire"
 
 msgctxt "model:ir.action,name:"
 msgid "Profession"
@@ -350,6 +382,14 @@ msgctxt "view:party.employment.version:"
 msgid "Salary Information"
 msgstr "Données liées à la rémunération"
 
+msgctxt "view:party.employment:"
+msgid "Work section"
+msgstr "Section gestionnaire"
+
 msgctxt "view:party.party:"
 msgid "Employment"
 msgstr "Données professionnelles"
+
+msgctxt "view:party.party:"
+msgid "Work Section"
+msgstr "Service gestionnaire"
