--- a/modules/party_public_employment_fr/doc/fr/CHANGELOG
+++ b/modules/party_public_employment_fr/doc/fr/CHANGELOG
@@ -1,2 +1,4 @@
+* FEA#14116 Ajout des données pour le précompte des employés du service public français
+
 Version 2.6 - 2019-10-11
 * FEA#12056 Ajout des données de précompte
