--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13984 Fixes on daily report command (handle extra info, default template, template encoding, documentation, make config parser compliant with kubernetes deployment)
 * BUG#13984 Fixes on daily report command (lua script, html template and date filter)
 * BUG#13905 Add BPIJ chain in daily
 * BUG#12337 Export Configuration can now be duplicated using "Ctrl + Shift + d"
