--- a/modules/report_engine_bdoc/doc/en/CHANGELOG
+++ b/modules/report_engine_bdoc/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14122 Allow to select the GED format original for BDOC
 * OTH#00000 Do not encode in base 64 since the zeep library encode it
 * FEA#13118 Allow to call BDOC via webservice
 
