contract_insurance: Take into account auto_remove_not_subscriptable default value (#3516)
Fix #00000

--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Take into account the default value of auto_remove_not_subscriptable in the tests
 * FEA#13843 Add covereds information to simulate API
 * FEA#13568 Update fields in party GDPR extraction
 * BUG#13518 Check extra data business kind and coherence with existing party extra data
