--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Prend en compte la valeur par défaut de auto_remove_not_subscriptable dans les tests
 * FEA#13843 Ajoute les informations de risques couverts dans l'API simulate
 * FEA#13568 Mise à jour des champs dans l'extraction RGPD d'un tiers
 * BUG#13518 Vérification du type métier des données complémentaires et cohérence avec les données tiers existantes
