--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correctif sur la récupération de la valeur du cache Coog
 * BUG#13984 Correction de la commande de rapport de batch (gestion des informations complémentaires, template par défaut, encoding du template, documentation, rendre l'analyseur syntaxique de configuration compatible avec les déploiements kubernetes)
 * BUG#13984 Correction de la commande de rapport de batch (script lua, template html et filtre par date)
 * BUG#13905 Ajout de la chaine BPIJ dans la chaine journalière
